# remy

./: .gitignore  README.md
firmware/controle_motores/: controle_motores.ino
firmware/controle_pwm/: controle_pwm.ino
firmware/encoder/: encoder.ino
firmware/esp32/: motors.cpp
firmware/estudo_pid_base/: estudo_pid_base.ino
firmware/pid_hoverboard_gui/: CMakeLists.txt
firmware/pid_hoverboard_gui/include/: QInfoSlider.h  SerialHandler.h  WheelWidget.h
firmware/pid_hoverboard_gui/src/: QInfoSlider.cpp  SerialHandler.cpp  WheelWidget.cpp  main.cpp
firmware/testes/: controlador.c
remy_ws/: Dockerfile  compose.yml
remy_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
remy_ws/install/navegation/lib/navegation/: joystick_reader  laser_to_pointcloud  odom_pub  ps4_teleop_node  serial_controller
remy_ws/install/navegation/share/navegation/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
remy_ws/install/navegation/share/navegation/config/: slam_params.yaml
remy_ws/log/: latest_build
remy_ws/src/my_bot_hardware/: CMakeLists.txt  bot_system_plugin.xml  package.xml
remy_ws/src/my_bot_hardware/config/: diff_drive_controller.yaml
remy_ws/src/my_bot_hardware/include/my_bot_hardware/: bot_system.hpp
remy_ws/src/my_bot_hardware/launch/: real_robot.launch.py
remy_ws/src/my_bot_hardware/resource/: bot_system_plugin.xml
remy_ws/src/my_bot_hardware/src/: bot_system.cpp
remy_ws/src/my_bot_hardware/urdf2_description/urdf/: urdf2.xacro
remy_ws/src/navegation/: package.xml  setup.cfg  setup.py
remy_ws/src/navegation/config/: ekf_config.yaml  ekf_filter_node.yaml  ps4_teleop.yaml  slam_params.yaml
remy_ws/src/navegation/launch/: ekf_launch.py  localization_launch.py  pid_controller.py
remy_ws/src/navegation/maps/: mapa_real.yaml  meu_mapa.pgm  odometria_ruim.pgm  odometria_ruim.yaml  simulacao.pgm  simulacao.yaml  teste_primeiro.pgm  teste_primeiro.yaml  vai.pgm  vai.yaml
remy_ws/src/navegation/maps/install/: local_setup.sh  setup.sh
remy_ws/src/navegation/maps/log/: latest_build
remy_ws/src/navegation/navegation/: estado_motores_pub.py  joystick_reader.py  odom_pub.py  pid_converter.py  serial_controller.py
remy_ws/src/navegation/worlds/: empty_clean.world
remy_ws/src/remy_hardware/: package.xml  setup.cfg  setup.py
remy_ws/src/urdf2_description/: package.xml  setup.cfg  setup.py
remy_ws/src/urdf2_description/launch/: display.launch.py  gazebo.launch.py
remy_ws/src/urdf2_description/meshes/: limb1_v1_1.stl  limb1_v1__1__1.stl  limb2_v1_1.stl  limb3_v1_1.stl  limb4_v1_1.stl  limb4_v1__1__1.stl  limb4_v1__2__1.stl  limb4_v1__3__1.stl  limb5_v1_1.stl  limb5_v1__1__1.stl  limb5_v1__2__1.stl  limb5_v1__3__1.stl
remy_ws/src/urdf2_description/urdf/: materials.xacro  urdf2.gazebo  urdf2.trans  urdf2.xacro
(+2 files in other folders)
