<?xml version="1.0"?>
<package format="3">
  <name>my_bot_hardware</name>
  <version>0.1.0</version>
  <description>ros2_control hardware interface for real differential drive robot</description>

  <maintainer email="diassarah238@gmail.com">sarah</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>controller_manager</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
